# WolfMind

./: .env.example  .gitignore  FIX_REPORT.md  README.md  game.py  main.py  pyproject.toml  roles.py  utils.py  快速开始.md
backend/: .env.example  README.md  config.py  main.py  test_import.py
backend/analysis/: __init__.py  agents.py  log_parser.py  pipeline.py  schemas.py
backend/api/: __init__.py
backend/core/: game_engine.py  game_logger.py  knowledge_base.py  utils.py
backend/models/: __init__.py  roles.py  schemas.py
backend/prompts/: game_prompts.py  role_prompts.py
backend/services/: __init__.py
frontend/: README.md  index.html  script.js  server.py  styles.css
